# nbody

./: CMakeLists.txt  README.md  main.cpp
include/: body.hpp  game.hpp
src/: game.cpp
